# game

./: .gitignore  CMakeLists.txt  application.hpp  imgui.ini  main.cpp
craft/: craft_system.hpp  recipe_registry.hpp
include/view/: view.hpp
include/view/component/toggle/: solar_panel.hpp
include/view/component/window/: status.hpp  tab_menu.hpp
include/view/components/: status_page.hpp  tab_menu.hpp
include/view/components/toggle/: solar_panel.hpp
include/view_model/: view_model.hpp
item/: drink.hpp  factory.hpp  food.hpp  item.hpp  item_category.hpp  item_factory.hpp  item_id.hpp  other.hpp  protein_bar.hpp  register_macro.hpp
item/attribute/: attribute.hpp  factory.hpp  hydration.hpp  nutrition.hpp  stackable.hpp
item/data/food/: protein_bar.json
item/data/other/: ice_block.json  metal_scrap.json
model/: electricity.hpp  inventory.hpp  model.hpp  player.hpp  task_manager.hpp
model/craft/: recipe.hpp
model/impl/: electricity.hpp  player.hpp
src/: application.hpp  data.hpp  main.cpp  power.hpp  resource_type.hpp  screen.hpp
src/model/: electricity.hpp  ore.hpp
src/util/: atomic_clamped.hpp  clamped.hpp  periodic_task.hpp  resource_type.hpp  task.hpp
src/view/: status.hpp  tab.hpp  view.hpp
src/view/components/: solar_panel_toggle.hpp  status_bar.hpp  tab_menu.hpp
src/view/page/: generator_room.hpp  mining_room.hpp
src/view_model/: electricity.hpp  ore.hpp  view_model.hpp
test/: CMakeLists.txt
test/util/: clamped.cpp
tests/: CMakeLists.txt
tests/util/: clamped_test.cpp
ui/element/: resource_bar.hpp
util/: CMakeLists.txt  atomic_clamped.hpp  clamped.hpp  clamped_values.hpp  color.cpp  color.hpp  task.hpp  types.hpp
util/task/: one_shot_task.hpp  task.hpp  timer_task.hpp
view/: color.hpp  view.hpp
view/window/: CMakeLists.txt  current_room.hpp  default_config.hpp  info.hpp  main_window.cpp  side_menu.cpp  status.cpp  window_info.hpp
view/window/engi/: mechgen.cpp
view_model/: player.hpp  system.hpp
